Add basic UI for current Weather

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="feels_like">Feels like %1$s°</string>
+    <string name="high_and_low">High %1$s° - Low %2$s°</string>
+
+    <string name="speed_metric">%1$s m/s</string>
+    <string name="speed_imperial">%1$s mph</string>
 </resources>
