--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <string name="speed_metric">%1$s m/s</string>
     <string name="speed_imperial">%1$s mph</string>
+    <string name="favorites">Favorites</string>
+    <string name="no_favorites">No favorites added</string>
 </resources>
